[project]
name = "WikipediaAnnotatedCorpus"
version = "1.2.0"
description = ""
authors = [
  {name = "Nobuhiro Ueda", email = "ueda-n127@hotmail.co.jp"},
]
maintainers = [
  {name = "Nobuhiro Ueda", email = "ueda-n127@hotmail.co.jp"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rhoknp>=1.5.1",
    "tabulate>=0.9.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pip",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"

[tool.ruff]
line-length = 120
indent-width = 4
src = ["scripts"]
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "PL", "PD", "NPY", "RUF", "UP", "TID", "COM", "PT"]
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "E501",  # Line too long
    "RUF001",  # String contains ambiguous `ノ` (KATAKANA LETTER NO). Did you mean `/` (SOLIDUS)?
    "RUF002",  # Docstring contains ambiguous `，` (FULLWIDTH COMMA). Did you mean `,` (COMMA)?
    "RUF003",  # Comment contains ambiguous `（` (FULLWIDTH LEFT PARENTHESIS). Did you mean `(` (LEFT PARENTHESIS)?
    "COM812",  # Trailing comma missing
    "PLR2004",  # Magic value used in comparison
]
