[project]
name = "WikipediaAnnotatedCorpus"
version = "1.5.1"
description = ""
authors = [
  {name = "Nobuhiro Ueda", email = "ueda-n127@hotmail.co.jp"},
]
maintainers = [
  {name = "Nobuhiro Ueda", email = "ueda-n127@hotmail.co.jp"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rhoknp>=1.5.1",
    "tabulate>=0.9.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pip",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.12"

[tool.ruff]
line-length = 120
indent-width = 4
src = ["scripts"]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "E501",  # Line too long
    "RUF001",  # String contains ambiguous `ノ` (KATAKANA LETTER NO). Did you mean `/` (SOLIDUS)?
    "RUF002",  # Docstring contains ambiguous `，` (FULLWIDTH COMMA). Did you mean `,` (COMMA)?
    "RUF003",  # Comment contains ambiguous `（` (FULLWIDTH LEFT PARENTHESIS). Did you mean `(` (LEFT PARENTHESIS)?
    "COM812",  # Trailing comma missing
    "PLR2004",  # Magic value used in comparison
    "ANN002",  # Missing type annotation for `*args`
    "ANN003",  # Missing type annotation for `**kwargs`
    "FA100",  # Missing `from __future__ import annotations`, but uses `...`
    "S101",  # Use of `assert` detected
    "G004",  # Logging statement uses f-string
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "T201",  # `print` found
    "TD002",  # Missing author in TODO
    "ERA001",  # Found commented-out code
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
    "D",  # pydocstyle
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104"  # Missing docstring in public package
]
"tests/*" = [
    "D",  # pydocstyle
    "S101",  # Use of `assert` detected
    "INP001",  # File `...` is part of an implicit namespace package. Add an `__init__.py`
]

[tool.ruff.lint.mccabe]
max-complexity = 20  # default: 10
